Test/dafny0/LabeledAssertsResolution.dfy.expect
LabeledAssertsResolution.dfy(51,9): Error: assert label shadows a dominating label
LabeledAssertsResolution.dfy(53,9): Error: assert label shadows a dominating label
LabeledAssertsResolution.dfy(8,11): Error: assert label shadows a dominating label
LabeledAssertsResolution.dfy(18,10): Error: label shadows a dominating label
LabeledAssertsResolution.dfy(19,10): Error: label shadows a dominating label
LabeledAssertsResolution.dfy(25,24): Error: assert label shadows a dominating label
LabeledAssertsResolution.dfy(27,11): Error: assert label shadows a dominating label
LabeledAssertsResolution.dfy(33,22): Error: assert label shadows a dominating label
LabeledAssertsResolution.dfy(72,4): Error: break label is undefined or not in scope: ABC
LabeledAssertsResolution.dfy(80,15): Error: unresolved identifier: reveal_C
LabeledAssertsResolution.dfy(93,15): Error: no label 'XYZ' in scope at this time
LabeledAssertsResolution.dfy(113,12): Error: unresolved identifier: reveal_X
12 resolution/type errors detected in LabeledAssertsResolution.dfy
